--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=demo
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://root:fYmWJnxvIndQMoIwagBnJUbDEwMUWBrB@mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://root:fYmWJnxvIndQMoIwagBnJUbDEwMUWBrB@maglev.proxy.rlwy.net:13227/railway
 spring.datasource.username=root
 spring.datasource.password=fYmWJnxvIndQMoIwagBnJUbDEwMUWBrB
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
